...
    <Screen scrollable>
      <Text className="mb-s-8" variant="headingLarge">
        Olá
      </Text>

      <Text variant="paragraphLarge" className="mb-s-40">
        Digite seu e-mail e senha para entrar
      </Text>

      <ControlledTextInput
        control={form.control}
        name="email"
        label="E-mail"
...

      <Button
        onPress={navigateToSignUpScreen}
        variant="outline"
        className="mt-s-12"
        title="Criar conta"
        testID="go-to-sign-up-button"
      />
    </Screen>
  );
};

